# VASKUP

./: .env.example  .gitignore  README.md  create_sample_data.py  create_test_cache.py  debug_scraping_integration.py  explore_cache_structure.py  find_description_sample.py  main.py  pyproject.toml  requirements.txt  simple_cache_check.py  streamlit_app.py  streamlit_vector_test.py  test_description_chunking.py  test_description_scraper.py  test_integrated_preprocessing.py  test_patent_parser.py  test_performance_monitoring.py  test_preprocessing.py  test_serp_basic.py  test_serp_client.py  test_serpapi_debug.py  test_streamlit_scraping.py  test_vector_store.py  vector_store_analysis.md
.cursor/rules/: langgraph_components.mdc  langgraph_streamlit.mdc  langgraph_workflow.mdc
.taskmaster/: state.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  tasks.json.bak
data/: sample_patents.xlsx
reference/: Cursorrule_langgraph.md  Cusorrule_langgraph_Streamlit_integration.md  Cusorrule_langgraph_components.md
script/: PRD_KOR.txt
scripts/: PRD.txt
src/hybrid_search/: __init__.py  bm25_search.py  hybrid_manager.py  jina_reranker.py  reranker.py
src/langgraph_crag/: __init__.py  crag_pipeline.py  graders.py  nodes.py  state.py
src/vaskup/: __init__.py  (+2 more)
test_chroma_db/: chroma.sqlite3
test_chroma_performance/: chroma.sqlite3
(+9 files in other folders)
